--- a/app/src/main/res/layout/activity_event_bus.xml
+++ b/app/src/main/res/layout/activity_event_bus.xml
@@ -4,4 +4,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/btnEventBus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Send EventBus Message"
+        android:textAllCaps="false" />
+
+    <TextView
+        android:id="@+id/tvEventBus"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="Show EventBus Message" />
+
 </LinearLayout>
