--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,11 @@
         android:text="Retrofit"
         android:textAllCaps="false" />
 
+    <Button
+        android:id="@+id/rxjava"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Rxjava"
+        android:textAllCaps="false" />
+
 </LinearLayout>
