--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,10 +42,10 @@
         android:textAllCaps="false" />
 
     <Button
-        android:id="@+id/rxjava"
+        android:id="@+id/rxjava2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Rxjava"
+        android:text="RxJava2"
         android:textAllCaps="false" />
 
 </LinearLayout>
