--- a/app/src/main/res/layout/activity_bar_chart.xml
+++ b/app/src/main/res/layout/activity_bar_chart.xml
@@ -5,7 +5,11 @@
     android:orientation="vertical">
 
     <cn.ju.cv.barChart.BarChartView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/barChartView"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="20dp" />
 
 </LinearLayout>
