--- a/app/src/main/res/layout/activity_line_chart.xml
+++ b/app/src/main/res/layout/activity_line_chart.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <cn.ju.cv.lineChart.LineChartView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/lineChartView"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="20dp"
+        app:dot_normal_color="#00ff00"
+        app:dot_selected_color="#0000ff"
+        app:line_color="#ff00ff" />
 
 </LinearLayout>
