--- a/app/src/main/res/layout/fragment_cv.xml
+++ b/app/src/main/res/layout/fragment_cv.xml
@@ -22,4 +22,10 @@
         android:layout_height="wrap_content"
         android:text="曲线图" />
 
+    <Button
+        android:id="@+id/codeView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="codeView" />
+
 </LinearLayout>
