--- a/app/src/main/res/layout/fragment_cv.xml
+++ b/app/src/main/res/layout/fragment_cv.xml
@@ -26,6 +26,6 @@
         android:id="@+id/codeView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="codeView" />
+        android:text="验证码" />
 
 </LinearLayout>
