--- a/app/src/main/res/layout/fragment_cv.xml
+++ b/app/src/main/res/layout/fragment_cv.xml
@@ -46,4 +46,9 @@
         android:layout_height="wrap_content"
         android:text="卡片滑动切换" />
 
+    <Button
+        android:id="@+id/circleIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="圆形指示器" />
 </LinearLayout>
