--- a/app/src/main/res/layout/activity_rxjava.xml
+++ b/app/src/main/res/layout/activity_rxjava.xml
@@ -4,4 +4,48 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:tag="测试轮训">
+
+        <Button
+            android:id="@+id/btnIntervalRange"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="start" />
+
+        <TextView
+            android:id="@+id/tvIntervalRange"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="ce" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:tag="测试轮训">
+
+        <ToggleButton
+            android:id="@+id/btnInterval"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="start" />
+
+        <TextView
+            android:id="@+id/tvInterval"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="ce" />
+
+    </LinearLayout>
+
+
 </LinearLayout>
