--- a/app/src/main/res/layout/activity_rxbinding.xml
+++ b/app/src/main/res/layout/activity_rxbinding.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.AppCompatButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:enabled="true"
         android:text="clicks"
-        android:textAllCaps="false" />
+        android:textAllCaps="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.v7.widget.AppCompatButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLongClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="longClicks"
         android:textAllCaps="false"
-        app:layout_constraintStart_toEndOf="@id/btnClick" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnClick"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
         android:id="@+id/checkbox"
@@ -36,14 +40,15 @@
         app:layout_constraintStart_toEndOf="@id/checkbox"
         app:layout_constraintTop_toTopOf="@id/checkbox" />
 
-    <android.support.v7.widget.AppCompatEditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etName"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:hint="姓名"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnClick" />
 
-    <android.support.v7.widget.AppCompatEditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etAge"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
@@ -52,7 +57,7 @@
         app:layout_constraintStart_toEndOf="@id/etName"
         app:layout_constraintTop_toTopOf="@id/etName" />
 
-    <android.support.v7.widget.AppCompatButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,12 +67,13 @@
         app:layout_constraintStart_toEndOf="@id/etAge"
         app:layout_constraintTop_toTopOf="@+id/etAge" />
 
-    <android.support.v7.widget.AppCompatButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btPermission"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="权限"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etName" />
 
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
