--- a/app/src/main/res/layout/activity_swipe_cards.xml
+++ b/app/src/main/res/layout/activity_swipe_cards.xml
@@ -4,12 +4,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="200dp"
         android:layout_height="300dp"
         app:cardCornerRadius="8dp">
 
-        <android.support.v7.widget.AppCompatTextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#00ff00"
@@ -17,14 +17,14 @@
             android:text="滑动"
             android:textSize="30sp" />
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="200dp"
         android:layout_height="300dp"
         app:cardCornerRadius="8dp">
 
-        <android.support.v7.widget.AppCompatTextView
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#0000ff"
@@ -32,14 +32,14 @@
             android:text="滑动"
             android:textSize="30sp" />
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="200dp"
         android:layout_height="300dp"
         app:cardCornerRadius="8dp">
 
-        <android.support.v7.widget.AppCompatTextView
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#ff0000"
@@ -47,6 +47,6 @@
             android:text="滑动"
             android:textSize="30sp" />
 
-    </android.support.v7.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </com.assess15.customView.swipeCards.SwipeCards>
