--- a/app/src/main/res/layout/fragment_sc.xml
+++ b/app/src/main/res/layout/fragment_sc.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/glide"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:text="Glide"
         android:textAllCaps="false" />
 
