--- a/module_arch/src/main/res/layout/activity_arch.xml
+++ b/module_arch/src/main/res/layout/activity_arch.xml
@@ -22,4 +22,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="MVVM" />
+
+    <Button
+        android:id="@+id/btnAOP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="AOP" />
 </LinearLayout>
