--- a/module_open_projects/src/main/res/layout/activity_dagger2_android.xml
+++ b/module_open_projects/src/main/res/layout/activity_dagger2_android.xml
@@ -9,17 +9,20 @@
         android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Main1Activity中User对象的注入" />
+        android:text="Main1Activity中User对象的注入"
+        android:textAllCaps="false" />
 
     <Button
         android:id="@+id/btn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Main1Activity中TextView对象的注入" />
+        android:text="Main1Activity中TextView对象的注入"
+        android:textAllCaps="false" />
 
     <Button
         android:id="@+id/btn3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fragment的注入" />
+        android:text="Fragment的注入"
+        android:textAllCaps="false" />
 </LinearLayout>
